fixed sinque 1st cbc spacing issue

--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -77,6 +77,23 @@ height: 300px;
    height: 700px;
    }
 }
+
+/* for when the simplest solution is just to add a spacing element */
+/* region medium */
+@media (min-width: 720px) {
+   .spacer {
+      height: var(--space-small);
+   }
+}
+
+/* region large */
+@media (min-width: 1100px) {
+   .spacer {
+      height: var(--space-medium);
+   }
+}
+
+
 /* end of: Global Styles */
 
 
